# taqsim-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.devcontainer/: devcontainer.json
data/: taqsim_youtube_links.csv
taqsim-ai/: __init__.py  audio_chunker.py  audio_classifier.py  data_explorer_ui.py  embedding_extractor.py  embedding_visualizer.py  embedding_visualizer_interactive.py  embedding_visualizer_simple.py  embedding_visualizer_streamlit.py  homepage.py  normalize_embeddings.py  pipeline.py  silence_remover.py  streamlit_app.py  taqsim_narrative_arc_new.py  youtube_audio_processor.py  youtube_downloader.py
taqsim-ai/archive/: chunk_stitcher.py  embedding_visualizer_simple.py  youtube_audio_processor.py
taqsim-ai/data/: taqsim_ai.csv
taqsim-ai/data/embeddings/: 009f5a90-7e47-4e45-8d3d-9405a13d97db_1_0_30.npz  009f5a90-7e47-4e45-8d3d-9405a13d97db_2_30_60.npz  009f5a90-7e47-4e45-8d3d-9405a13d97db_3_60_90.npz  009f5a90-7e47-4e45-8d3d-9405a13d97db_4_90_120.npz  009f5a90-7e47-4e45-8d3d-9405a13d97db_5_120_150.npz  009f5a90-7e47-4e45-8d3d-9405a13d97db_6_150_180.npz  009f5a90-7e47-4e45-8d3d-9405a13d97db_7_180_210.npz  009f5a90-7e47-4e45-8d3d-9405a13d97db_8_210_240.npz  009f5a90-7e47-4e45-8d3d-9405a13d97db_9_240_270.npz  0141c22f-40e9-4182-93de-d4a8d9fe4f78_10_270_300.npz  0141c22f-40e9-4182-93de-d4a8d9fe4f78_11_300_330.npz  0141c22f-40e9-4182-93de-d4a8d9fe4f78_12_330_360.npz  0141c22f-40e9-4182-93de-d4a8d9fe4f78_13_360_390.npz  0141c22f-40e9-4182-93de-d4a8d9fe4f78_14_390_420.npz  0141c22f-40e9-4182-93de-d4a8d9fe4f78_15_420_450.npz  0141c22f-40e9-4182-93de-d4a8d9fe4f78_16_450_480.npz  0141c22f-40e9-4182-93de-d4a8d9fe4f78_17_480_510.npz  (+1202 more)
taqsim-ai/processing/: audio_chunker.py  maqam_classifier.py  normalize_embeddings.py  pipeline.py
taqsim-ai/streamlit/: data_explorer_ui.py  embedding_visualizer_streamlit.py  homepage.py  streamlit_app.py
(+1159 files in other folders)
