[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taqsim-ai"
version = "0.1.0"
description = "Taqsim AI project"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "pytube>=12.1.0",
    "librosa>=0.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["taqsim-ai"]
