[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taqsim-ai"
version = "0.1.0"
description = "Taqsim AI project"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "audioread>=3.0.0",
    "matplotlib>=3.9.4",
    "umap-learn>=0.5.3",
    "altair>=5.1.2",
    "pandas>=2.0.0",
    "streamlit>=1.45.1",
    "scikit-learn>=1.6.1",
    "xgboost>=2.1.4",
    "seaborn>=0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["taqsim-ai"]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "yt-dlp>=2025.3.31",
]
